# PersoServer

./: .gitignore  CMakeLists.txt  PersoServer.pro  PersoServer.pro.user.11a0aa8  PersoServer.pro.user.776bfd4  README.md  config.h.in  main.cpp
.gitea/workflows/: demo.yaml  persoserver-continuous.yaml  (+1 more)
ClientConnection/: abstract_client_command.cpp  abstract_client_command.h  abstract_client_connection.cpp  abstract_client_connection.h  abstract_firmware_generation_system.cpp  abstract_firmware_generation_system.h  box_sticker_print_command.cpp  box_sticker_print_command.h  client_connection.cpp  client_connection.h  echo_comand.cpp  echo_comand.h  firmware_generation_system.cpp  firmware_generation_system.h  get_current_context_command.cpp  get_current_context_command.h  last_box_sticker_print_command.cpp  last_box_sticker_print_command.h  last_pallet_sticker_print_command.cpp  last_pallet_sticker_print_command.h  log_in_command.cpp  log_in_command.h  log_out_command.cpp  log_out_command.h  pallet_sticker_print_command.cpp  pallet_sticker_print_command.h  production_context.cpp  production_context.h  production_context_owner.cpp  production_context_owner.h  production_line_connection.cpp  production_line_connection.h  production_line_context.cpp  production_line_context.h  production_line_context_owner.cpp  production_line_context_owner.h  release_command.cpp  release_command.h  release_confirm_command.cpp  release_confirm_command.h  (+13 more)
Database/: abstract_sql_database.cpp  abstract_sql_database.h  abstract_sql_table.cpp  abstract_sql_table.h  database_buffer.cpp  database_buffer.h  database_controller.cpp  database_controller.h  database_controller_interface.cpp  database_controller_interface.h  database_table_model.cpp  database_table_model.h  postgre_sql_database.cpp  postgre_sql_database.h  postgre_sql_table.cpp  postgre_sql_table.h  postgres_controller.cpp  postgres_controller.h  sql_query_values.cpp  sql_query_values.h  sql_table_relation.cpp  sql_table_relation.h  table_record.cpp  table_record.h
Doc/: .$Protocol.drawio.bkp  .$pipeline.drawio.bkp  .$uml.drawio.bkp  ER_Diagram_v1.drawio  ER_Diagram_v2.drawio  Protocol.drawio  pipeline.drawio  uml.drawio
GUI/: abstract_gui.cpp  abstract_gui.h  abstract_gui.h.tmp  authorization_gui.cpp  authorization_gui.h  delegates_gui.cpp  delegates_gui.h  gui.cpp  gui.h  gui_delegates.cpp  gui_delegates.h  gui_initial.cpp  gui_initial.h  gui_master.cpp  gui_master.h  interaction_system.cpp  interaction_system.h  log_system.cpp  log_system.h  main_window_kernel.cpp  main_window_kernel.h  mainwindow.cpp  mainwindow.h  mainwindow_gui.cpp  mainwindow_gui.h  mainwindow_kernel.cpp  mainwindow_kernel.h  pallet_shiping_dialog.h~RF19d2aa04.TMP  perso_init_dialog.cpp  perso_init_dialog.h  user_interaction_system.cpp  user_interaction_system.h
General/: definitions.h  hash_model.cpp  hash_model.h  psobject.cpp  psobject.h  types.h
Log/: console_log_backend.cpp  console_log_backend.h  file_log_backend.cpp  file_log_backend.h  file_log_backend.h.tmp  log_backend.cpp  log_backend.h  log_system.cpp  log_system.h  udp_log_backend.cpp  udp_log_backend.h  widget_log_backend.cpp  widget_log_backend.h
Logging/: log_backend.cpp  log_backend.h  stdout_log_backend.cpp  stdout_log_backend.h  syslog_log_backend.cpp  syslog_log_backend.h  widget_log_backend.cpp  widget_log_backend.h
Management/: abstract_perso_server.cpp  abstract_perso_server.h  abstract_server_manager.cpp  abstract_server_manager.h  admin_manager.cpp  admin_manager.h  administration_system.cpp  administration_system.h  administration_system_builder.cpp  administration_system_builder.h  firmware_generation_system.cpp  firmware_generation_system.h  global_context.cpp  global_context.h  global_environment.cpp  global_environment.h  issuer_order.cpp  issuer_order.h  log_system.cpp  log_system.h  obu_initializator.cpp  obu_initializator.h  obu_issuer_order.cpp  obu_issuer_order.h  order_creation_system.cpp  order_creation_system.h  perso_client.cpp  perso_client.h  perso_client_connection.cpp  perso_client_connection.h  perso_client_connection_builder.cpp  perso_host.cpp  perso_host.h  perso_manager.cpp  perso_manager.h  perso_server.cpp  perso_server.h  server_manager.cpp  server_manager.cpp.autosave  server_manager.h  (+14 more)
Miscellaneous/: thread_object_builder.cpp  thread_object_builder.h
Network/: perso_client.cpp  perso_client.h  perso_client_connection.cpp  perso_client_connection.h  perso_client_connection_builder.cpp  perso_client_connection_builder.h  perso_host.cpp  perso_host.h  perso_server.cpp  perso_server.h
Printing/: abstract_sticker_printer.cpp  abstract_sticker_printer.h  te310_printer.cpp  te310_printer.h
ProductionDispatcher/: abstract_authorization_system.cpp  abstract_authorization_system.h  abstract_box_release_system.cpp  abstract_box_release_system.h  abstract_context.cpp  abstract_context.h  abstract_firmware_generation_system.cpp  abstract_firmware_generation_system.h  abstract_info_system.cpp  abstract_info_system.h  abstract_launch_system.cpp  abstract_launch_system.h  abstract_production_dispatcher.cpp  abstract_production_dispatcher.h  abstract_production_system.cpp  abstract_production_system.h  abstract_release_system.cpp  abstract_release_system.h  abstract_sticker_printer.cpp  abstract_sticker_printer.h  abstract_transponder_release_system.cpp  abstract_transponder_release_system.h  authorization_system.cpp  authorization_system.h  box_release_system.cpp  box_release_system.h  firmware_generation_system.cpp  firmware_generation_system.h  general_production_dispatcher.cpp  general_production_dispatcher.h  info_system.cpp  info_system.h  production_context.cpp  production_context.h  production_dispatcher.cpp  production_dispatcher.h  production_dispatcher_context.cpp  production_dispatcher_context.h  production_line_launch_system.cpp  production_line_launch_system.h  (+4 more)
Security/: des.cpp  des.h  transponder_key_generator.cpp  transponder_key_generator.h
StickerPrinter/: isticker_printer.cpp  isticker_printer.h  te310_printer.cpp  te310_printer.h
(+64 files in other folders)
